 1.1b6
- made it easier to trigger tuning picker in guitar editor
- drum editor : selection now works if click/drag starts on black section header
- more improvements to lightweight vertical scrollbar
- handle when no vertical scrollbar is needed in drum editor
- fixed notes not beaming in chords of some imported midis
- fixed note subtails disappearing in some imported midis
- fixed amount of measures too short in some imported midis
- improved grouping of beamed notes in common non-4/4 time signatures
- improved grouping of beamed triplets
- converted keys image from gif to png
- improved handling of ties with whole notes
- Improved beamed notes grouping in non-4/4 time signatures
- Hopefully fixed volume picker not closing when pressing escape on all platforms
- Improved drum editor behaviour when few drums are shown
- Removed many useless renders during song playback
- Fixed linux crash
- Improved ALSA port opening code on linux
- Improved export to sampled audio on linux
- Improved i18n support on linux
- Cleaned up image loading code
- Refactored beaming code so that smarter beaming becomes possible
- Fixed triplets beaming with non-triplets
- Improved scons build system
- Made wait window progress bar pulse correctly

 1.1b5
- note beams
- Keys now appear in keyboard editor too
- support for displaying chords in score
- improved document icon
- fixed score editor crash with very high or very low notes
- refactored note moving code
- improved editor vertical scrollbars (thumb could hardly be grabbed when it was at the bottom)
- fixed score editor crashes
- forbid changing tempo and other basic settings during playback
- fixed set-up menus incorrectly appearing when clicking on elements in track header
- fixed display of silences longer than 1 measure
- improved performance of non-linear score display
- fixed triplet sign appearing at wrong Y location
- fixed bugs in "rearrange notes"
- fixed crash in controller editor
- triplets no more group across measures